# LSA_2025

./: CMakeLists.txt  context.md  main.cpp  rules.md  specs.md  stdafx.h  todo.md
Headers/: Error.h  FST.h  GRB.h  IT.h  In.h  LT.h  LexA.h  Log.h  MFST.h  Out.h  Parm.h  RPN.h  Rules.h  SemA.h  asmGenerator.h
Sources/: Error.cpp  FST.cpp  GRB.cpp  IT.cpp  In.cpp  LT.cpp  LexA.cpp  Log.cpp  MFST.cpp  Out.cpp  Parm.cpp  RPN.cpp  SemA.cpp  asmGenerator.cpp
